# helm-agent

./: .env.example  .gitignore  HANDOFF.md  README.md  helm.yaml  pyproject.toml
examples/: local_model_smoke.py  smoke.py
helm/: __init__.py  app.py  run_service.py
helm/config/: __init__.py  settings.py
helm/context/: __init__.py  artifacts.py  context_builder.py  events.py  feedback.py  memory.py  prompt_builder.py  session.py
helm/profiles/: __init__.py  adhoc.py  loader.py  registry.py  schema.py
helm/profiles/builtin/default/: config.yaml  memory.md  profile.md  soul.md
helm/profiles/builtin/executor/: config.yaml  memory.md  profile.md  soul.md
helm/profiles/builtin/planner/: config.yaml  memory.md  profile.md  soul.md
helm/providers/: __init__.py  base.py  capabilities.py  echo.py  openai_compatible.py  registry.py  resolver.py
helm/runtime/: __init__.py  compression.py  delegation.py  invocation.py  loop.py  result.py  tool_dispatcher.py
helm/skills/: __init__.py  loader.py  registry.py  schema.py
helm/store/: __init__.py  db.py  repositories.py
helm/taskgraph/: __init__.py  executor.py  models.py  planner.py  serializer.py
helm/tools/: __init__.py  base.py  delegate.py  filesystem.py  git.py  registry.py  shell.py  toolsets.py
helm/web/: auth.py
helm/web/api/: app.py
helm/web/realtime/: __init__.py
tests/: test_backbone.py  test_context_and_tools.py  test_openai_provider.py  test_settings.py  test_web_app.py
webui/: index.html  package-lock.json  package.json
webui/src/: App.tsx  styles.css
(+12 files in other folders)
